--- a/index.html
+++ b/index.html
@@ -3,40 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="app.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Intro component with sign up form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Learn to code by watching others
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+<div class="container">
+  <div class="wrapper">
+  <div class="signup-text">
+      <h1 class="text-title">Learn to code by watching others</h1>
+      <p class="title-text">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. </p>
+  </div>
+  <div class="signup-form">
+    <strong class="card-strong-text">Try it free 7 days then</strong><span class="card">$20/mo. thereafter</span>
+    <form class="sign-up-form" action="">
+      <input class="form-input" type="text" name="" id="" placeholder="First Name">
+      <input class="form-input" type="text" name="" id="" placeholder="Last Name">
+      <input class="form-input" type="email" name="" id="" placeholder="Email Address">
+       <input class="form-input" type="password" name="" id="" placeholder="Password">
+       <input class="form-btn" type="button" value="Claim your free trial">
+    </form>
+    <p class="small-text">By clicking the button, you are agreeing to our</p><span class="form-terms">Terms and Services</span>
+  </div>
+</div>
+</div>
 
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
-    </p>
+    </p> -->
   </footer>
 </body>
 </html>
