--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="app.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Intro component with sign up form</title>
 </head>
 <body>
@@ -17,9 +17,12 @@
   <div class="wrapper">
   <div class="signup-text">
       <h1 class="text-title">Learn to code by watching others</h1>
+      <div class="main-text">
       <p class="title-text">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-        but understanding how developers think is invaluable. </p>
+        but understanding how  developers   think is invaluable. </p>
+      </div>
   </div>
+  
   <div class="signup-form">
     <strong class="card-strong-text">Try it free 7 days then</strong><span class="card">$20/mo. thereafter</span>
     <form class="sign-up-form" action="">
@@ -29,7 +32,7 @@
        <input class="form-input" type="password" name="" id="" placeholder="Password">
        <input class="form-btn" type="button" value="Claim your free trial">
     </form>
-    <p class="small-text">By clicking the button, you are agreeing to our</p><span class="form-terms">Terms and Services</span>
+    <p class="small-text_">By clicking the button, you are agreeing to our</p><span class="form-terms">Terms and Services</span>
   </div>
 </div>
 </div>
@@ -39,6 +42,6 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p> -->
-  </footer>
+  <!-- </footer> -->
 </body>
 </html>
