--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         but understanding how  developers   think is invaluable. </p>
       </div>
   </div>
-  
+  <div class="card">
+   <span><strong>Try it free 7 days</strong>  then $20/mo. thereafter</span>
+    </div>
   <div class="signup-form">
-    <strong class="card-strong-text">Try it free 7 days then</strong><span class="card">$20/mo. thereafter</span>
+  
     <form class="sign-up-form" action="">
       <input class="form-input" type="text" name="" id="" placeholder="First Name">
       <input class="form-input" type="text" name="" id="" placeholder="Last Name">
@@ -32,7 +34,9 @@
        <input class="form-input" type="password" name="" id="" placeholder="Password">
        <input class="form-btn" type="button" value="Claim your free trial">
     </form>
-    <p class="small-text_">By clicking the button, you are agreeing to our</p><span class="form-terms">Terms and Services</span>
+    <div class="terms">
+    <p class="small-text">By clicking the button, you are agreeing to our</p><a href="" class="form-terms">Terms and Services</a>
+  </div>
   </div>
 </div>
 </div>
